# MIDIControl001

./: .gitignore  CMakeLists.txt  README.md  param_ids_dump.txt  report_summary.txt
Source/dsp/: BaseVoice.h  InstrumentRegistry.h  MixNormalizer.cpp  MixNormalizer.h  PeakGuard.h  PeakGuard.h.bak2  Voice.h  VoiceManager.h
Source/dsp/envelopes/: EnvelopeA.cpp  EnvelopeA.h
Source/dsp/legacy/: VoiceLegacy.h
Source/dsp/oscillators/: OscillatorA.h
Source/dsp/voices/: VoiceA.cpp  VoiceA.h  VoiceDopp.cpp  VoiceDopp.h
Source/gui/: SimpleVolumeGUI.h
Source/params/: ParamLayout.cpp  ParamLayout.h  ParameterIDs.h  ParameterSnapshot.h
Source/plugin/: PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h
Source/utils/: LogRotate.h
Tests/: CMakeLists.txt  main.cpp  test_analyzer_bridge.cpp  test_dsp.cpp
Tests/baseline/: voice_output_reference.json
Tests/diagnostics/: test_rms_alignment.cpp
Tests/dsp/: test_BaseVoice_interface.cpp  test_DebugJsonDump.cpp  test_InstrumentRegistry.cpp  test_MixNormalizer.cpp  test_PeakGuard.cpp  test_SmoothedValue.cpp  test_Voice.cpp  test_VoiceDopp_Action6.cpp  test_VoiceDopp_Action7.cpp  test_VoiceManager.cpp  test_Voice_scalecheck.cpp  test_voice_manager_mode_wiring.cpp
Tests/dsp/envelopes/: test_EnvelopeA.cpp
Tests/dsp/oscillators/: test_oscillator.cpp
Tests/dsp/voices/: test_Voice.cpp  test_VoiceA_controller.cpp  test_VoiceA_diagnostics.cpp  test_VoiceA_equivalence.cpp  test_VoiceDopp_Action10_1.cpp  test_VoiceDopp_Action4.cpp  test_VoiceDopp_Action8.cpp  test_VoiceDopp_Action9.cpp  test_VoiceDopp_action10_5_audio_gate.cpp  test_VoiceDopp_action1_kinematic_api.cpp  test_VoiceDopp_action2_time.cpp  test_VoiceDopp_action3_heading_speed.cpp  test_VoiceDopp_action5_lattice.cpp  test_VoiceDopp_skeleton.cpp  test_voice_dopp_exists.cpp
Tests/params/: test_Snapshot.cpp  test_params.cpp  test_voice_mode_param.cpp
Tests/plugin/: test_processor_integration.cpp  test_processor_smoke.cpp
Tests/removed_legacy/: test_Voice_diagnostics_legacy.cpp
Tests/utils/: dsp_metrics.h
assets/: VoiceDopp_concept.xml
baseline/: voice_output_reference.json
docs/: MIDIControl001_Architecture_Whitepaper.md  VOICE_TYPE_ROADMAP.md  VoiceDopp_MathSpec.md  VoiceDopp_PhaseIV_MathSpec.md  architecture.md  dbg_trace_map.txt  engineering_continuity_and_alignment.md  engineering_continuity_and_alignment_phaseII.md  prime_directive.md  testing_alignment.md  voice_types_roadmap.md
docs/11-10-2025/: Action_5A5_Violation_Report.md  MIDIControl001_MetaLessons_Addendum_11-10-2025.md  MIDIControl001_Phase4F_Verification_Summary_afternoon.md  PrimeDirective_Enforcement.md
docs/11-13-2025/: Engineering_Continuity_VoiceDopp.md
docs/11-14-2025/: PhaseII_VoiceSystem_Roadmap.md
docs/11-15-2025/: voice_modes_design_doc_B3 (1).md
docs/11-16-2025/: PhaseIII_Full_Continuity_Report.md  S3_Formal_Model (2).md  S5_PhaseIII_Design (2).md  S6_Next_Engineer_Onboarding (1).md  S7_Roadmap (1).md  next_engineer_orientation.md  phase3_engineering_continuity_report (1).md
docs/11-17-2025/: S3_Formal_Model_Current.md  S5_PhaseIII_Design_Current.md  S6_Next_Engineer_Onboarding_Current.md  S7_Roadmap_Current.md  VoiceDopp_Global_Interpretation.md
docs/11-19-2025/: S3_Formal_Model_PhaseIV (2).md  S5_PhaseIV_Design_and_Risks.md  S6_PhaseIV_Next_Engineer_Onboarding.md  S7_PhaseIV_Roadmap.md  VoiceDopp_PhaseIV_ExecutionPlan.md  VoiceDopp_PhaseIV_ExecutionPlan_v2+.md  VoiceDopp_PhaseIV_MathSpec.md
tools/: analyze_logs.py  post_build_report.sh
